[package]
name = "key-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_core = "0.6.4"
bip39 = "2.0.0"
chia-bls = "0.4.0"
chia-wallet = "0.4.0"
bech32 = "0.9.1"
hex = "0.4.3"
sha2 = "0.10.8"
inquire = "0.6.2"
